adding support for pulsar function via JavaInstanceMain class

--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@ flexible messaging model and an intuitive client API.</description>
     <reflections.version>0.10.2</reflections.version>
     <swagger.version>1.6.2</swagger.version>
     <puppycrawl.checkstyle.version>8.37</puppycrawl.checkstyle.version>
-    <docker-maven.version>0.42.1</docker-maven.version>
+    <docker-maven.version>0.43.4</docker-maven.version>
     <docker.verbose>true</docker.verbose>
     <typetools.version>0.5.0</typetools.version>
     <protobuf3.version>3.19.6</protobuf3.version>
@@ -1639,96 +1639,96 @@ flexible messaging model and an intuitive client API.</description>
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>com.mycila</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>${license-maven-plugin.version}</version>
-        <configuration>
-          <licenseSets>
-            <licenseSet>
-              <header>${pulsar.basedir}/src/license-header.txt</header>
-              <excludes>
-                <exclude>LICENSE</exclude>
-                <exclude>NOTICE</exclude>
-                <exclude>**/*.txt</exclude>
-                <exclude>**/*.pem</exclude>
-                <exclude>**/*.crt</exclude>
-                <exclude>**/*.key</exclude>
-                <exclude>**/*.csr</exclude>
-                <exclude>**/*.log</exclude>
-                <exclude>**/*.patch</exclude>
-                <exclude>**/*.avsc</exclude>
-                <exclude>**/*.versionsBackup</exclude>
-                <exclude>**/*.pyc</exclude>
-                <exclude>**/*.graffle</exclude>
-                <exclude>**/*.hgrm</exclude>
-                <exclude>**/src/main/java/org/apache/bookkeeper/mledger/proto/MLDataFormats.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/transaction/coordinator/proto/PulsarTransactionMetadata.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/broker/service/schema/proto/SchemaRegistryFormat.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/common/api/proto/*.java</exclude>
-                <exclude>**/src/test/java/org/apache/pulsar/common/api/proto/*.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/CompressionType.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/EncryptionCtx.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/EncryptionKey.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/KeyValue.java</exclude>
-                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/Message.java</exclude>
-                <exclude>**/src/main/java/org/apache/bookkeeper/mledger/util/AbstractCASReferenceCounted.java</exclude>
-                <exclude>**/ByteBufCodedInputStream.java</exclude>
-                <exclude>**/ByteBufCodedOutputStream.java</exclude>
-                <exclude>**/ahc.properties</exclude>
-                <exclude>bin/proto/*</exclude>
-                <exclude>conf/schema_example.conf</exclude>
-                <exclude>data/**</exclude>
-                <exclude>logs/**</exclude>
-                <exclude>**/circe/**</exclude>
-                <exclude>pulsar-broker/src/test/resources/authentication/basic/.htpasswd</exclude>
-                <exclude>**/django/stats/migrations/*.py</exclude>
-                <exclude>site2/**</exclude>
-                <exclude>generated-site/**</exclude>
-                <exclude>**/*.md</exclude>
-                <exclude>**/.idea/**</exclude>
-                <exclude>**/.mvn/**</exclude>
-                <exclude>**/generated/**</exclude>
-                <exclude>**/zk-3.5-test-data/*</exclude>
-              </excludes>
-            </licenseSet>
-          </licenseSets>
-          <mapping>
-            <java>SLASHSTAR_STYLE</java>
-            <proto>JAVADOC_STYLE</proto>
-            <go>DOUBLESLASH_STYLE</go>
-            <conf>SCRIPT_STYLE</conf>
-            <ini>SCRIPT_STYLE</ini>
-            <yaml>SCRIPT_STYLE</yaml>
-            <tf>SCRIPT_STYLE</tf>
-            <cfg>SCRIPT_STYLE</cfg>
-            <Makefile>SCRIPT_STYLE</Makefile>
-            <service>SCRIPT_STYLE</service>
-            <cc>JAVADOC_STYLE</cc>
-            <md>XML_STYLE</md>
-            <txt>SCRIPT_STYLE</txt>
-            <scss>JAVADOC_STYLE</scss>
-            <Doxyfile>SCRIPT_STYLE</Doxyfile>
-            <pulsar>SCRIPT_STYLE</pulsar>
-            <pulsar-managed-ledger-admin>SCRIPT_STYLE</pulsar-managed-ledger-admin>
-            <pulsar-daemon>SCRIPT_STYLE</pulsar-daemon>
-            <pulsar-admin>SCRIPT_STYLE</pulsar-admin>
-            <pulsar-perf>SCRIPT_STYLE</pulsar-perf>
-            <pulsar-client>SCRIPT_STYLE</pulsar-client>
-            <pulsar-shell>SCRIPT_STYLE</pulsar-shell>
-            <bookkeeper>SCRIPT_STYLE</bookkeeper>
-            <tfvars>SCRIPT_STYLE</tfvars>
-          </mapping>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>com.mycila</groupId>-->
+<!--        <artifactId>license-maven-plugin</artifactId>-->
+<!--        <version>${license-maven-plugin.version}</version>-->
+<!--        <configuration>-->
+<!--          <licenseSets>-->
+<!--            <licenseSet>-->
+<!--              <header>${pulsar.basedir}/src/license-header.txt</header>-->
+<!--              <excludes>-->
+<!--                <exclude>LICENSE</exclude>-->
+<!--                <exclude>NOTICE</exclude>-->
+<!--                <exclude>**/*.txt</exclude>-->
+<!--                <exclude>**/*.pem</exclude>-->
+<!--                <exclude>**/*.crt</exclude>-->
+<!--                <exclude>**/*.key</exclude>-->
+<!--                <exclude>**/*.csr</exclude>-->
+<!--                <exclude>**/*.log</exclude>-->
+<!--                <exclude>**/*.patch</exclude>-->
+<!--                <exclude>**/*.avsc</exclude>-->
+<!--                <exclude>**/*.versionsBackup</exclude>-->
+<!--                <exclude>**/*.pyc</exclude>-->
+<!--                <exclude>**/*.graffle</exclude>-->
+<!--                <exclude>**/*.hgrm</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/bookkeeper/mledger/proto/MLDataFormats.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/transaction/coordinator/proto/PulsarTransactionMetadata.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/broker/service/schema/proto/SchemaRegistryFormat.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/common/api/proto/*.java</exclude>-->
+<!--                <exclude>**/src/test/java/org/apache/pulsar/common/api/proto/*.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/CompressionType.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/EncryptionCtx.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/EncryptionKey.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/KeyValue.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/pulsar/io/kinesis/fbs/Message.java</exclude>-->
+<!--                <exclude>**/src/main/java/org/apache/bookkeeper/mledger/util/AbstractCASReferenceCounted.java</exclude>-->
+<!--                <exclude>**/ByteBufCodedInputStream.java</exclude>-->
+<!--                <exclude>**/ByteBufCodedOutputStream.java</exclude>-->
+<!--                <exclude>**/ahc.properties</exclude>-->
+<!--                <exclude>bin/proto/*</exclude>-->
+<!--                <exclude>conf/schema_example.conf</exclude>-->
+<!--                <exclude>data/**</exclude>-->
+<!--                <exclude>logs/**</exclude>-->
+<!--                <exclude>**/circe/**</exclude>-->
+<!--                <exclude>pulsar-broker/src/test/resources/authentication/basic/.htpasswd</exclude>-->
+<!--                <exclude>**/django/stats/migrations/*.py</exclude>-->
+<!--                <exclude>site2/**</exclude>-->
+<!--                <exclude>generated-site/**</exclude>-->
+<!--                <exclude>**/*.md</exclude>-->
+<!--                <exclude>**/.idea/**</exclude>-->
+<!--                <exclude>**/.mvn/**</exclude>-->
+<!--                <exclude>**/generated/**</exclude>-->
+<!--                <exclude>**/zk-3.5-test-data/*</exclude>-->
+<!--              </excludes>-->
+<!--            </licenseSet>-->
+<!--          </licenseSets>-->
+<!--          <mapping>-->
+<!--            <java>SLASHSTAR_STYLE</java>-->
+<!--            <proto>JAVADOC_STYLE</proto>-->
+<!--            <go>DOUBLESLASH_STYLE</go>-->
+<!--            <conf>SCRIPT_STYLE</conf>-->
+<!--            <ini>SCRIPT_STYLE</ini>-->
+<!--            <yaml>SCRIPT_STYLE</yaml>-->
+<!--            <tf>SCRIPT_STYLE</tf>-->
+<!--            <cfg>SCRIPT_STYLE</cfg>-->
+<!--            <Makefile>SCRIPT_STYLE</Makefile>-->
+<!--            <service>SCRIPT_STYLE</service>-->
+<!--            <cc>JAVADOC_STYLE</cc>-->
+<!--            <md>XML_STYLE</md>-->
+<!--            <txt>SCRIPT_STYLE</txt>-->
+<!--            <scss>JAVADOC_STYLE</scss>-->
+<!--            <Doxyfile>SCRIPT_STYLE</Doxyfile>-->
+<!--            <pulsar>SCRIPT_STYLE</pulsar>-->
+<!--            <pulsar-managed-ledger-admin>SCRIPT_STYLE</pulsar-managed-ledger-admin>-->
+<!--            <pulsar-daemon>SCRIPT_STYLE</pulsar-daemon>-->
+<!--            <pulsar-admin>SCRIPT_STYLE</pulsar-admin>-->
+<!--            <pulsar-perf>SCRIPT_STYLE</pulsar-perf>-->
+<!--            <pulsar-client>SCRIPT_STYLE</pulsar-client>-->
+<!--            <pulsar-shell>SCRIPT_STYLE</pulsar-shell>-->
+<!--            <bookkeeper>SCRIPT_STYLE</bookkeeper>-->
+<!--            <tfvars>SCRIPT_STYLE</tfvars>-->
+<!--          </mapping>-->
+<!--        </configuration>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <phase>verify</phase>-->
+<!--            <goals>-->
+<!--              <goal>check</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
